--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node-modules/.bin/cypress open"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-  "cypress": "^10.0.2"
+    "@faker-js/faker": "^5.5.3",
+    "cypress": "^10.0.2"
   }
 }
